# tiler

./: .coveragerc  .gitignore  .stestr.conf  README.rst  requirements.txt  setup.cfg  tox.ini
config/: ostree-local.yaml  ostree.yaml  uefi.yaml
config/disk/: README.txt  ostree-local.yaml  ostree-remote.yaml  uefi.yaml  vanilla.yaml
config/ostree/: image.yaml
config/ostree-arm64/: image.yaml
config/uefi/: image.yaml
config/uefi-arm64/: image.yaml
doc/source/: conf.py  developer.txt  disk-configuration.txt  index.rst  ostree.rst  rootfs.rst
docker/: Dockerfile
live-config/: build-iso.sh  clean.sh
live-config/auto/: clean  config
live-config/pablo-config/bootloaders/grub-pc/: grub.cfg
live-config/pablo-config/bootloaders/grub-pc/live-theme/: theme.txt
live-config/pablo-config/bootloaders/isolinux/: live.cfg.in  menu.cfg
live-config/pablo-config/package-lists/: tiler.list.chroot_install
releasenotes/source/: conf.py  index.rst
tiler/: __init__.py  block.py  config.py  disk.py  exceptions.py  image.py  install.py  iso.py  machine.py  mount.py  ostree.py  pxe.py  utils.py  vm.py
tiler/cmd/: __init__.py  install.py  iso.py  options.py  pxe.py  shell.py
tiler/modules/: base.py  noop.py
tiler/modules/installer/: bootloader.py  disk.py  ostree.py  unpack.py
tiler/modules/stages/: disk.py  early.py  final.py  install.py  late.py  post.py  unpack.py
tiler/tests/: test_tiler.py
tools/: build-container.sh  kill-dev.sh  run-dev.sh  run-test.sh
