[metadata]
name = tiler
summary = Debian Installer
description-file =
    README.rst
author = Chuck SHort
author-email = charles.short@windriver.com
home-page = https://github.com/zulcss/tiler
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    tiler

[entry_points]
console_scripts =
    tiler = tiler.cmd.shell:main
