[metadata]
name = tiler
summary = Debian Installer
description-file =
    README.rst
author = Chuck SHort
author-email = charles.short@windriver.com
home-page = https://github.com/zulcss/tiler
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    tiler

[entry_points]
console_scripts =
    tiler = tiler.cmd.shell:main

tiler.modules.stages = 
    early = tiler.modules.stages.early:Early
    disk = tiler.modules.stages.disk:Disk
    unpack = tiler.modules.stages.unpack:Unpack
    install = tiler.modules.stages.late:Late
    final = tiler.modules.stages.final:Final
    post = tiler.modules.stages.post:Post

tiler.modules = 
    # noop module
    noop.placeholder = tiler.modules.noop:Noop

    # installer modules
    installer.disk.parted = tiler.modules.installer.disk:Parted
    installer.disk.fs = tiler.modules.installer.disk:Filesystem